@@ -1,3 +1,8 @@
+2010-10-25 Guido Scholz <guido.scholz@bayernline.de>
+	* src/function.*, src/canvasfunction.*: Replace std::min/max by
+	generic Qt functions qMin/qMax; this should fix armel compile
+	error (reported for debian #570848).
+
 2010-10-24 Guido Scholz <guido.scholz@bayernline.de>
 	* configure.ac, src/synthdata.cpp: Basic support for libclalsadrv
 	API version 2.0.0.
